kubernetes/apps/hiba/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiba
  namespace: hiba
spec:
  selector:
    app: hiba
  ports:
    - port: 80
      targetPort: 8080
