kubernetes/apps/hiba/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hiba
  namespace: hiba
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hiba.kostikidis.net
      secretName: hiba-kostikidis-net-tls
  rules:
    - host: hiba.kostikidis.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hiba
                port:
                  number: 80
